--- a/result/2022-01-05.md
+++ b/result/2022-01-05.md
@@ -44,3 +44,4 @@
 44. [一起向未来多语种版MV](https://s.weibo.com//weibo?q=%23%E4%B8%80%E8%B5%B7%E5%90%91%E6%9C%AA%E6%9D%A5%E5%A4%9A%E8%AF%AD%E7%A7%8D%E7%89%88MV%23&Refer=top) 27107
 45. [湖北小伙筹50吨蔬菜驰援西安](https://s.weibo.com//weibo?q=%23%E6%B9%96%E5%8C%97%E5%B0%8F%E4%BC%99%E7%AD%B950%E5%90%A8%E8%94%AC%E8%8F%9C%E9%A9%B0%E6%8F%B4%E8%A5%BF%E5%AE%89%23&Refer=top) 23490
 46. [85岁院士一天工作14个小时](https://s.weibo.com//weibo?q=%2385%E5%B2%81%E9%99%A2%E5%A3%AB%E4%B8%80%E5%A4%A9%E5%B7%A5%E4%BD%9C14%E4%B8%AA%E5%B0%8F%E6%97%B6%23&Refer=top) 22818
+47. [经常饿一顿或引发胆结石](https://s.weibo.com//weibo?q=%23%E7%BB%8F%E5%B8%B8%E9%A5%BF%E4%B8%80%E9%A1%BF%E6%88%96%E5%BC%95%E5%8F%91%E8%83%86%E7%BB%93%E7%9F%B3%23&Refer=top) 15946
