--- a/result/2022-01-05.md
+++ b/result/2022-01-05.md
@@ -45,4 +45,6 @@
 45. [一起向未来多语种版MV](https://s.weibo.com//weibo?q=%23%E4%B8%80%E8%B5%B7%E5%90%91%E6%9C%AA%E6%9D%A5%E5%A4%9A%E8%AF%AD%E7%A7%8D%E7%89%88MV%23&Refer=top) 27107
 46. [湖北小伙筹50吨蔬菜驰援西安](https://s.weibo.com//weibo?q=%23%E6%B9%96%E5%8C%97%E5%B0%8F%E4%BC%99%E7%AD%B950%E5%90%A8%E8%94%AC%E8%8F%9C%E9%A9%B0%E6%8F%B4%E8%A5%BF%E5%AE%89%23&Refer=top) 23490
 47. [85岁院士一天工作14个小时](https://s.weibo.com//weibo?q=%2385%E5%B2%81%E9%99%A2%E5%A3%AB%E4%B8%80%E5%A4%A9%E5%B7%A5%E4%BD%9C14%E4%B8%AA%E5%B0%8F%E6%97%B6%23&Refer=top) 22818
-48. [山东泰山中超夺冠](https://s.weibo.com//weibo?q=%23%E5%B1%B1%E4%B8%9C%E6%B3%B0%E5%B1%B1%E4%B8%AD%E8%B6%85%E5%A4%BA%E5%86%A0%23&Refer=top) 11717
+48. [2岁宝宝泳池里拉肚子](https://s.weibo.com//weibo?q=2%E5%B2%81%E5%AE%9D%E5%AE%9D%E6%B3%B3%E6%B1%A0%E9%87%8C%E6%8B%89%E8%82%9A%E5%AD%90&Refer=top) 13958
+49. [2022雷军第一件事](https://s.weibo.com//weibo?q=%232022%E9%9B%B7%E5%86%9B%E7%AC%AC%E4%B8%80%E4%BB%B6%E4%BA%8B%23&Refer=top) 13404
+50. [山东泰山中超夺冠](https://s.weibo.com//weibo?q=%23%E5%B1%B1%E4%B8%9C%E6%B3%B0%E5%B1%B1%E4%B8%AD%E8%B6%85%E5%A4%BA%E5%86%A0%23&Refer=top) 12529
