--- a/result/2022-01-05.md
+++ b/result/2022-01-05.md
@@ -46,5 +46,6 @@
 46. [一起向未来多语种版MV](https://s.weibo.com//weibo?q=%23%E4%B8%80%E8%B5%B7%E5%90%91%E6%9C%AA%E6%9D%A5%E5%A4%9A%E8%AF%AD%E7%A7%8D%E7%89%88MV%23&Refer=top) 27107
 47. [湖北小伙筹50吨蔬菜驰援西安](https://s.weibo.com//weibo?q=%23%E6%B9%96%E5%8C%97%E5%B0%8F%E4%BC%99%E7%AD%B950%E5%90%A8%E8%94%AC%E8%8F%9C%E9%A9%B0%E6%8F%B4%E8%A5%BF%E5%AE%89%23&Refer=top) 23490
 48. [85岁院士一天工作14个小时](https://s.weibo.com//weibo?q=%2385%E5%B2%81%E9%99%A2%E5%A3%AB%E4%B8%80%E5%A4%A9%E5%B7%A5%E4%BD%9C14%E4%B8%AA%E5%B0%8F%E6%97%B6%23&Refer=top) 22818
-49. [2022雷军第一件事](https://s.weibo.com//weibo?q=%232022%E9%9B%B7%E5%86%9B%E7%AC%AC%E4%B8%80%E4%BB%B6%E4%BA%8B%23&Refer=top) 16006
+49. [2022雷军第一件事](https://s.weibo.com//weibo?q=%232022%E9%9B%B7%E5%86%9B%E7%AC%AC%E4%B8%80%E4%BB%B6%E4%BA%8B%23&Refer=top) 17150
 50. [山东泰山中超夺冠](https://s.weibo.com//weibo?q=%23%E5%B1%B1%E4%B8%9C%E6%B3%B0%E5%B1%B1%E4%B8%AD%E8%B6%85%E5%A4%BA%E5%86%A0%23&Refer=top) 13380
+51. [95后女护士哄睡确诊婴儿保持半小时姿势不变](https://s.weibo.com//weibo?q=%2395%E5%90%8E%E5%A5%B3%E6%8A%A4%E5%A3%AB%E5%93%84%E7%9D%A1%E7%A1%AE%E8%AF%8A%E5%A9%B4%E5%84%BF%E4%BF%9D%E6%8C%81%E5%8D%8A%E5%B0%8F%E6%97%B6%E5%A7%BF%E5%8A%BF%E4%B8%8D%E5%8F%98%23&Refer=top) 11964
